[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false }
minreq = { version = "2.11.2", features = ["https"] }
once_cell = "1"
rust-embed = "8.4.0"
salvo = {version = "0.68.2", features = ["websocket","serve-static"] }
tokio = { version = "1", features = ["macros","signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = "0.3"

